# ArduinoEngineeringKitV2Usage

./: .gitignore  README.md
helloworld/: helloworld.ino
pcconnect2ardunio/: CMakeLists.txt  pcconnect2ardunio.cpp  run.sh
pcconnect2ardunio/libs/: CMakeLists.txt  tcgets.c  tcgets.h
serialmessagebus/: serialmessagebus.ino
